--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon -L",
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
